--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -3,7 +3,7 @@ name : English
 # General Strings
 general_1 : "Reply to a user's message or give username/user_id."
 general_2 : "Error! Wrong Usage of Command."
-general_3 : "Some **exception occured** while processing your query.\n\nException Type:- {0}"
+general_3 : "Some **exception occured** while processing your query.\n\nException Type:- {0}\n\n𝗸𝗶𝗻𝗱𝗹𝘆 𝗮𝗱𝗱 @AWROSEASSIT1 𝗺𝗮𝗻𝘂𝘃𝗮𝗹 𝗴𝘂𝘆𝘀 𝘁𝗼 𝗲𝗻𝗷𝗼𝘆 𝗹𝗮𝗴 𝗳𝗿𝗲𝗲 𝗺𝘂𝘀𝗶𝗰,\n\n 𝘼𝙡𝙧𝙚𝙖𝙙𝙮 𝙡𝙚𝙖𝙫𝙚 𝙞𝙩"
 general_4 : "You're an anonymous admin in this chat group!\nRevert back to User Account From Admin Rights."
 general_5 : "You need to be admin with manage voice chat rights to perform this action."
 general_6 : "Bot isn't streaming on voice chat."
